examples/test/testpolicy12274.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12274
  namespace: namespace139
spec:
  podSelector:
    matchLabels:
      key44: value18
      key33: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value18
          key15: value21
      podSelector:
        matchLabels:
          key15: value27
